Ornek001 klasörü güncellendi.

--- a/Ornek001/kisiler.html
+++ b/Ornek001/kisiler.html
@@ -64,7 +64,7 @@
         <h2>Arama Sonucu</h2>
         <hr>
         <div class="row">
-          	<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" data-toggle="modal" data-target="#exampleModal"">
+          	<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" data-toggle="modal" data-target="#exampleModal">
 						  	<center style="cursor:pointer">
 							  <img src="personel.resimleri/avatar.png" alt="" class="img-rounded" width="150" height="200">
 							  <div class="text-muted"><b>Nuri Akman</b></div>
