--- a/Ornek001/index.html
+++ b/Ornek001/index.html
@@ -75,6 +75,91 @@
         </div>
       </div>
 
+      <!-- Kişiler -->
+      <div class="container mt-2">
+        <h2>Arama Sonucu</h2>
+        <hr>
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" data-toggle="modal" data-target="#exampleModal">
+                <center style="cursor:pointer">
+                <img src="personel.resimleri/avatar.png" alt="" class="img-rounded" width="150" height="200">
+                <div class="text-muted"><b>Nuri Akman</b></div>
+              </center>
+            </div>
+        </div>
+      </div>
+
+      <!--Modal Burada -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nuri Akman</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="container">
+                <div class="row">
+                  <div class="col-md-3 mt-2">
+              <img src="personel.resimleri/avatar.png" alt="" class="img-rounded" width="150" height="300">
+              </div>
+                <div class="col-md-9">
+                  <table class="table table-striped">
+                  <thead>
+                    <tr class="text-center">
+                        <th colspan="3">Personel Bilgileri</th>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Adı Soyadı</td>
+                      <td>Nuri Akman</td>
+                    </tr>
+                    <tr>
+                      <td>Telefon</td>
+                      <td>1992</td>
+                    </tr>
+                    <tr>
+                      <td>Oda No</td>
+                      <td>YBS-2034</td>
+                    </tr>
+                    <tr>
+                      <td>Unvanı</td>
+                      <td>Genel Müdür Yardımcısı</td>
+                    </tr>
+                    <tr>
+                      <td>Dairesi</td>
+                      <td>Genel Müdürlük Makamı</td>
+                    </tr>
+                    <tr>
+                      <td>E-Posta</td>
+                      <td>nuriakman@gmail.com</td>
+                    </tr>
+                  </tbody>
+                </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      <!-- Kayıt yok burada-->
+      <div class="container mt-2">
+        <h2>Arama Sonucu</h2>
+        <hr>
+        <div class="row">
+          <img src="personel.resimleri/norecord.jpg" alt="" class="img-rounded" width="250" height="250">
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
