--- a/Ornek001/index.html
+++ b/Ornek001/index.html
@@ -95,6 +95,15 @@
             </div>
         </div>
       </div>
+        <!-- Kayıt yok burada-->
+      <div class="container mt-2">
+        <h2>Arama Sonucu</h2>
+        <hr>
+        <div class="row">
+          <img src="personel.resimleri/norecord.jpg" alt="" class="img-rounded" width="250" height="250">
+        </div>
+      </div>
+
 
       <!--Modal Burada -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -158,77 +167,13 @@
             </div>
           </div>
         </div>
-      <!--Modal 2 -->
-      <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Kemal Mutlu</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <div class="container">
-                <div class="row">
-                  <div class="col-md-3 mt-2">
-              <img src="personel.resimleri/1692.jpg" alt="" class="img-rounded" width="150" height="300">
-              </div>
-                <div class="col-md-9">
-                  <table class="table table-striped">
-                  <thead>
-                    <tr class="text-center">
-                        <th colspan="3">Personel Bilgileri</th>
 
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Adı Soyadı</td>
-                      <td>Kemal Mutlu</td>
-                    </tr>
-                    <tr>
-                      <td>Telefon</td>
-                      <td>1992</td>
-                    </tr>
-                    <tr>
-                      <td>Oda No</td>
-                      <td>YBS-2034</td>
-                    </tr>
-                    <tr>
-                      <td>Unvanı</td>
-                      <td>Genel Müdür Yardımcısı</td>
-                    </tr>
-                    <tr>
-                      <td>Dairesi</td>
-                      <td>Genel Müdürlük Makamı</td>
-                    </tr>
-                    <tr>
-                      <td>E-Posta</td>
-                      <td>mutlukemal1717@gmail.com</td>
-                    </tr>
-                  </tbody>
-                </table>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
 
-              </div>
-            </div>
-          </div>
+    <footer class="footer mt-auto py-3 text-center bg-dark">
+        <div class="container">
+          <span class="text-muted">Kış kampı için hazırlanmış bir örnektir.</span>
         </div>
-
-      <!-- Kayıt yok burada-->
-      <div class="container mt-2">
-        <h2>Arama Sonucu</h2>
-        <hr>
-        <div class="row">
-          <img src="personel.resimleri/norecord.jpg" alt="" class="img-rounded" width="250" height="250">
-        </div>
-      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
