--- a/bootstrap.grid/index.html
+++ b/bootstrap.grid/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
 
-<!--
+
       <div class="container">
 
         <div class="row">
@@ -36,7 +36,7 @@
             <div class="col-12 col-sm-10 col-md-7 col-lg-4 col-xl-10 border border-primary text-center">.col-12 col-md-7 col-lg-4 col-xl-10 </div>
             <div class="col-12 col-sm-2 col-md-5 col-lg-8 col-xl-2 border border-primary text-center">.col-12 col-md-5 col-lg-8 col-xl-2</div>
       </div>
-    </div> -->
+    </div>
 
      <div class="container mt-5">
        <div class="row">
