Boostrap örneklerinde düzenlemeler yapıldı.

--- a/bootstrap.grid/ornek2.html
+++ b/bootstrap.grid/ornek2.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <h1>İçe içe sutun kullanımı</h1>
+  <h1>İçe içe sütun kullanımı</h1>
   <hr>
   <div class="container">
     <div class="row">
