Bootstrap örnekleri güncellendi.

--- a/bootstrap.grid/ornek1.html
+++ b/bootstrap.grid/ornek1.html
@@ -24,14 +24,14 @@
     <title>Hello, world!</title>
   </head>
   <body>
-      <h1>İçe içe sutun kullanımı</h1>
+      <h1>İçe içe sütun kullanımı</h1>
       <hr>
       <div class="container">
         <div class="row">
           <div class="col-12 cizgi">Col-12</div>
           <div class="col-12">
             <div class="row">
-              <div class="col-4 pad">
+              <div class="col-4">
                 <div class="row">
                   <div class="col-12 cizgi">col-12</div>
                   <div class="col-12 cizgi">col-12</div>
@@ -40,7 +40,7 @@
                   <div class="col-12 cizgi">col-12</div>
                 </div>
               </div>
-              <div class="col-8 pad">
+              <div class="col-8">
                 <div class="row">
                   <div class="col-12 cizgi" style="height:145px;">col-12</div>
                   <div class="col-12 cizgi" style="height:145px;">col-12</div>
