--- a/bootstrap.grid/ornek2.html
+++ b/bootstrap.grid/ornek2.html
@@ -34,13 +34,13 @@
       <div class="col-12 cizgi">Col-12</div>
       <div class="col-12">
         <div class="row">
-          <div class="col-3 pad">
+          <div class="col-3">
             <div class="row">
               <div class="col-12 cizgi" style="height:100px">Col-12</div>
               <div class="col-12 cizgi" style="height:100px">Col-12</div>
             </div>
           </div>
-          <div class="col-9 pad">
+          <div class="col-9">
             <div class="row">
               <div class="col-12 cizgi" style="height:200px">Col-12</div>
             </div>
