--- a/bootstrap.ornekleri/sticky-footer/index.html
+++ b/bootstrap.ornekleri/sticky-footer/index.html
@@ -87,6 +87,6 @@
       <span class="text-muted">Place sticky footer content here.</span>
     </div>
   </footer>
+  <script src="bootstrap/js/jquery-3.3.1.slim.min.js"></script>
 </body>
-<script src="bootstrap/js/jquery-3.3.1.slim.min.js""></script>
 </html>
