--- a/bootstrap.ornekleri/carousel-ornegi/index.html
+++ b/bootstrap.ornekleri/carousel-ornegi/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <title>Carousel Template for Bootstrap</title>
 
@@ -15,7 +15,7 @@
     <!-- Custom styles for this template -->
     <style>
       /* GLOBAL STYLES
--------------------------------------------------- */
+      -------------------------------------------------- */
       /* Padding below the footer and lighter body text */
 
       body {
