--- a/bootstrap.ornekleri/Album-Ornegi/album1.html
+++ b/bootstrap.ornekleri/Album-Ornegi/album1.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <title>Hello, world!</title>
 
 	<style>
@@ -48,7 +47,7 @@
 		footer p {
 		  margin-bottom: .25rem;
 		}
-	</style>    
+	</style>
   </head>
   <body>
 
