Bootstrap klasörü düzenlendi.

--- a/bootstrap.ornekleri/album2.html
+++ b/bootstrap.ornekleri/album2.html
@@ -9,7 +9,7 @@
     <title>Album example · Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<link href="bootstrap/css/bootstrap.min.css">
 
 
     <style>
