--- a/bootstrap.grid/ornek3.html
+++ b/bootstrap.grid/ornek3.html
@@ -33,13 +33,23 @@
   <div class="container">
     <div class="row">
       <div class="col-12 cizgi">Col-12</div>
+    </div>
+    <div class="row">
       <div class="col-4 cizgi">Col-12</div>
       <div class="col-8 cizgi">Col-12</div>
+    </div>
+    <div class="row">
       <div class="col-8 cizgi">Col-12</div>
       <div class="col-4 cizgi">Col-12</div>
+    </div>
+    <div class="row">
       <div class="col-4 cizgi">Col-12</div>
       <div class="col-8 cizgi">Col-12</div>
+    </div>
+    <div class="row">
       <div class="col-12 cizgi">Col-12</div>
+    </div>
+    <div class="row">
       <div class="col-12 cizgi">Col-12</div>
     </div>
   </div>
